# remind-me

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
contact/: forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
remind_me/: asgi.py  settings.py  urls.py  wsgi.py
src/: app.module.ts  main.ts
src/auth/: auth.controller.spec.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
src/events/: events.controller.spec.ts  events.controller.ts  events.module.ts  events.service.spec.ts  events.service.ts
src/events/dto/: create-event.dto.ts
src/events/schemas/: event.schema.ts
src/users/: users.controller.spec.ts  users.controller.ts  users.module.ts  users.service.spec.ts  users.service.ts
src/users/dto/: create-user.dto.ts
src/users/schemas/: users.schema.ts
templates/base/: base.html  navbar.html
templates/contact/: contact_create.html  contact_list.html  index.html  search.html
templates/contact/partials/: contact.html  edit.html  search_results.html
templates/contacts/: contact_create.html  contact_list.html  search.html  upload_vcf.html
templates/contacts/partials/: edit.html  event.html
templates/registration/: login.html  register.html
users/: forms.py  urls.py  views.py
