[tool.poetry]
name = "remind-me"
version = "1.0.0"
description = ""
authors = ["Ruud van den Boomen <ruudvdboomen@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-htmx = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
