[tool.poetry]
name = "remind-me"
version = "1.0.0"
description = ""
authors = ["Ruud van den Boomen <ruudvdboomen@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-htmx = "^1.21.0"
vobject = "^0.9.9"
django-extensions = "^3.2.3"
ipython = "^8.31.0"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
  "F",
  "E",
  "W",
  "B",      # flake8-bugbear
  "C90",    # mccabe (complexity)
  "I",      # isort
  "UP",     # pyupgrade
  "S",      # flake8-bandit
  "F401",
  "LOG",    # flake8-logging
  "PGH",    # pygrep-hooks
  "RUF100", # ruff (unused noqa)
]

[tool.ruff.lint.isort]
combine-as-imports = true